--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,20 @@
 OPENSEADRAGON CHANGELOG
 =======================
 
+0.9.129:
+
+* Fixed: navigator image not updating when base zoom image is changed (#147)
+* Fixed tile rendering issue at lower zoom levels with the IIIF TileSource (#55)
+* On IE, ajax errors would cause an exception to be thrown; fixed (#144)
+* Faster and more consistent millisecond getter (#138)
+* Fixed an error when using navPrevNextWrap on single images (#135)
+* Various fixes to our timer handling (#133)
+* Now generating source map for openseadragon.min.js (#51)
+* Fix for calculating overlay width / height (#142)
+* JSHint tidying (#136)
+* Improved Ajax method (#149)
+* Overhauled AJAX error reporting (#151)
+
 0.9.128:
 
 * The navigator is now off by default (#102)
@@ -31,10 +45,10 @@ OPENSEADRAGON CHANGELOG
 
 0.9.125:
 
-* Fully deprecated OpenSeadragon.createFromDZI, safely deprecated Viewer.openTileSource and 
+* Fully deprecated OpenSeadragon.createFromDZI, safely deprecated Viewer.openTileSource and
   Viewer.openDZI to use Viewer.open internally. (#53 & #54).
 * Full page bug fix for when viewer is child of document body (#43).
-* Overlays for DZI bug fix (#45). 
+* Overlays for DZI bug fix (#45).
 * DziTileSource: avoid changing relative paths (#56).
 * Fix typo in preserveViewport handling (#77).
 * Fix updateMulti timer leak after multiple Viewer.open() calls (#76).
